# SOLVAX

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codecov.yml  pyproject.toml
benchmarks/: __init__.py  benchmark_baselines.py  benchmark_bounded_adjoint.py  benchmark_checkpointed_block.py  benchmark_collectives.py  benchmark_generated_block.py  benchmark_kinetic_inversion.py  benchmark_mixed_precision_adjoint.py  benchmark_pcg.py  benchmark_recycling.py  benchmark_sweeps.py  problems.py  reproduce.py
docs/: api.md  autodiff.md  choosing.md  conf.py  getting_started.md  index.md  methods.md  operators.md  preconditioners.md  references.bib  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.7.3.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.8.7.md  sharding.md  testing.md
examples/: 01_block_tridiagonal_kinetic.py  02_advection_preconditioning.py  03_recycled_continuation.py  04_banded_lu.py  05_block_thomas_factor_solve.py  06_implicit_differentiation.py  07_jacobi_preconditioners.py  08_line_smoother.py  09_p_multigrid.py  10_mixed_precision_refinement.py  11_kronecker.py  12_operators.py  13_native_splu.py  14_tridiagonal_solve.py  15_chunked_jacobian.py  16_mixed_precision_block_thomas.py  17_pcg.py  18_complex_krylov_gradient.py  19_newton_krylov.py  20_affine_fixed_point.py  21_cyclic_tridiagonal.py  22_fourier_helmholtz.py  23_nystrom_pcg.py
tests/: conftest.py  (+20 more)
(+69 files in other folders)
