[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solvax"
description = "Differentiable structured linear solvers, preconditioners and matrix-free methods in JAX"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "UW Plasma", email = "rogerio.jorge@wisc.edu" }]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["jax", "equinox", "lineax"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/uwplasma/SOLVAX"
Documentation = "https://solvax.readthedocs.io"

[project.optional-dependencies]
native = ["scipy"]
dev = ["pytest", "pytest-cov", "pytest-xdist", "scipy", "numpy"]
docs = [
  "sphinx",
  "furo",
  "myst-parser",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex",
]

[tool.hatch.version]
path = "src/solvax/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/solvax"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/solvax"]

[tool.coverage.report]
fail_under = 95
show_missing = true
